--- a/view/contacto.html
+++ b/view/contacto.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>Contacto - Mi Empresa</title>
-  <link rel="stylesheet" href="css/estilos.css" />
+  <link rel="stylesheet" href="css/estilos.css" >
+  
 </head>
 <body>
   <header>
-    <div class="iconologo"> <a href="#"><img src="img/peinado.png" alt="" /></a>
+    <div class="iconologo"> <a href="#"><img src="img/peinado.png" alt="" ></a>
     </div>
     <div class="logo">Barber shop online</div>
     <nav>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="presupuesto.html">Presupuesto</a></li>
-        <li><a href="contacto.html" class="activo">Contacto</a></li>
+        <li><a href="view/productos.html">Productos</a></li>
+        <li><a href="view/presupuesto.html">Presupuesto</a></li>
+        <li><a href="view/contacto.html" class="activo">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -40,9 +41,9 @@
 
   <footer>
     <div class="redes">
-      <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook" /></a>
-      <a href="https://x.com/X."><img src="img/gorjeo.png" alt="Twitter" /></a>
-      <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram" /></a>
+      <a href="https://www.facebook.com/"><img src="img/facebook.png" alt="Facebook" ></a>
+      <a href="https://x.com/X."><img src="img/gorjeo.png" alt="Twitter" ></a>
+      <a href="https://www.instagram.com/"><img src="img/instagram.png" alt="Instagram" ></a>
     </div>
     <div class="info">
       <p>Dirección de la empresa - Calle abetos 12, azuqueca de henares , españa</p>
